refactored searchUser so that it accesses the read only list